--- a/index.html
+++ b/index.html
@@ -4,22 +4,72 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Q & A</title>
-    <!-- font-awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
-    <!-- extra fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap"
       rel="stylesheet"
     />
-    <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>questions project</h1>
-    <!-- javascript -->
+    <section  class="questions">
+      <div class="title">
+        <h2>general Q & A</h2>
+      </div>
+      <div class="section-center">
+        <article class="question">
+          <div class="question-title">
+            <p>how long will it take for me to start seeing results?</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+              </span>
+            </button>
+          </div>
+          <div class="question-text">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt natus vero quo hic eligendi eaque ut beatae, iusto impedit unde! Corrupti placeat impedit nulla culpa laudantium omnis deserunt qui saepe!</p>
+          </div>
+        </article>
+        <article class="question">
+          <div class="question-title">
+            <p>will i always be super sore after training sessions?</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+              </span>
+            </button>
+          </div>
+          <div class="question-text">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit, veniam aspernatur sapiente temporibus sint blanditiis commodi? Voluptatum laborum, consectetur optio, nam a aliquid accusantium quis ipsam animi cupiditate omnis. Cupiditate.</p>
+          </div>
+        </article>
+        <article class="question">
+          <div class="question-title">
+            <p>can i have more than one cheat meal during the week?</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+              </span>
+            </button>
+          </div>
+          <div class="question-text">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum iste doloribus aliquid eligendi perspiciatis quia eum unde! Eligendi temporibus corporis ab molestias dicta tenetur. Sint maiores autem eveniet? Tempora, est.</p>
+          </div>
+        </article>
+      </div>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
